data/derived/fa15/progs/unify/prog3002.ml.out
Characters 177-178:
  | Average(x, y)     -> ((eval(e, x, y) +. eval(e,x,y))/2.0)
                                   ^
Error: This expression has type expr but an expression was expected of type
         float
